--- a/console/src/main/webapp/WEB-INF/web.xml
+++ b/console/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,10 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/spring/*-beans.xml</param-value>
+        <param-value>
+            classpath:/spring/core-beans.xml,
+            classpath:/spring/shiro-beans.xml
+        </param-value>
     </context-param>
     <context-param>
         <param-name>webAppRootKey</param-name>
