--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,6 +12,10 @@
     <groupId>xyz.yp.module.qx</groupId>
     <artifactId>common</artifactId>
 
+    <properties>
+        <slf4j.version>1.7.10</slf4j.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -46,6 +50,16 @@
             <version>2.9.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
